# BrainTumor_MLOps

./: .env.example  .gitignore  CLAUDE.md  README.md  dvc.yaml  pyproject.toml
configs/: config.yaml
configs/data/: default.yaml
configs/model/: baseline.yaml  resnet50_transfer.yaml  simple_cnn.yaml  unet_classifier.yaml
configs/training/: default.yaml
docs/: Brain_Tumor_PitchDeck_v2.pptx  PIPELINE.md
frontend/: app.py
models/: baseline.pt  baseline_results.json  resnet50_transfer.pt  resnet50_transfer_results.json  simple_cnn.pt  simple_cnn_results.json  unet_classifier.pt  unet_classifier_results.json
notebooks/: 01_eda.ipynb
src/mlops_project/api/: core.py  logs_viewer.py  main.py  metrics.py  schemas.py
src/mlops_project/data/: dataset.py  prepare.py  splits.py  transforms.py
src/mlops_project/models/: baseline.py  factory.py  simple_cnn.py  transfer.py  unet_classifier.py
src/mlops_project/training/: metrics.py  train.py
src/mlops_project/utils/: wandb_logging.py
tests/: test_api.py  test_dataloader.py  test_dataset.py  test_splits.py
