[project]
name = "mlops-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "nathan massicot", email = "nathan.massicot@efrei.net" }
]
requires-python = ">=3.12"
dependencies = [
    "kaggle>=2.1.0",
]

[project.scripts]
mlops-project = "mlops_project:main"

[build-system]
requires = ["uv_build>=0.9.9,<0.10.0"]
build-backend = "uv_build"
