[project]
name = "mlops-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "nathan massicot", email = "nathan.massicot@efrei.net" }
]
requires-python = ">=3.12"
dependencies = [
    "albumentations>=2.0.8",
    "hydra-core>=1.3.2",
    "kaggle>=2.1.0",
    "omegaconf>=2.3.0",
    "pyarrow>=24.0.0",
    "python-dotenv>=1.2.2",
    "streamlit>=1.45.1",
    "scikit-learn>=1.8.0",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
    "wandb>=0.26.1",
]

[project.scripts]
mlops-project = "mlops_project:main"

[build-system]
requires = ["uv_build>=0.9.9,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "pillow>=12.2.0",
    "pytest>=9.0.3",
    "scikit-image>=0.26.0",
    "seaborn>=0.13.2",
    "tqdm>=4.67.3",
]
